--- a/KV6002/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/KV6002/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -79,6 +79,7 @@ LastExecutedLaunchName=DESKTOP-L99SHIF
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
+LastExecutedPlayModeType=PlayMode_InNewProcess
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 bInvertMouseLookYAxis=False
@@ -117,12 +118,16 @@ ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
+ContentBrowserTab1.SelectedPaths=/Game/FirstPersonBP/Blueprints
+AssetPropertyPicker.ThumbnailSizeScale=0.100000
+AssetPropertyPicker.CurrentViewType=0
 
 [EditorStartup]
 LastLevel=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 
 [AssetEditorManager]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/FirstPersonBP/Blueprints/radialHUD.radialHUD
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -135,6 +140,98 @@ StaticMeshActor.Rendering=True
 StaticMeshActor.Tags=True
 StaticMeshActor.Cooking=True
 StaticMeshActor.Actor=True
+PreviewMaterial.PhysicalMaterial=True
+PreviewMaterial.Material=True
+PreviewMaterial.Translucency=True
+PreviewMaterial.TranslucencySelfShadowing=True
+PreviewMaterial.Usage=True
+PreviewMaterial.Mobile=True
+PreviewMaterial.ForwardShading=True
+PreviewMaterial.Tessellation=True
+PreviewMaterial.Group Sorting=True
+PreviewMaterial.PostProcessMaterial=True
+PreviewMaterial.Refraction=True
+PreviewMaterial.Lightmass=True
+PreviewMaterial.Previewing=True
+PreviewMaterial.Thumbnail=True
+PreviewMaterial.ImportSettings=True
+MaterialExpressionVectorParameter.General=True
+MaterialExpressionVectorParameter.MaterialExpressionVectorParameter=True
+MaterialExpressionVectorParameter.MaterialExpression=True
+WaterProjectile_C.Tick=True
+WaterProjectile_C.Rendering=True
+WaterProjectile_C.Replication=True
+WaterProjectile_C.Input=True
+WaterProjectile_C.Actor=True
+SphereComponent.Variable=True
+SphereComponent.TransformCommon=True
+SphereComponent.Sockets=True
+SphereComponent.Shape=True
+SphereComponent.Navigation=True
+SphereComponent.Rendering=True
+SphereComponent.Physics=True
+SphereComponent.Collision=True
+SphereComponent.Tags=True
+SphereComponent.ComponentReplication=True
+SphereComponent.Cooking=True
+SphereComponent.Events=True
+StaticMeshComponent.Variable=True
+StaticMeshComponent.TransformCommon=True
+StaticMeshComponent.Sockets=True
+StaticMeshComponent.StaticMesh=True
+StaticMeshComponent.Materials=True
+StaticMeshComponent.Physics=True
+StaticMeshComponent.Collision=True
+StaticMeshComponent.Lighting=True
+StaticMeshComponent.Rendering=True
+StaticMeshComponent.Tags=True
+StaticMeshComponent.ComponentReplication=True
+StaticMeshComponent.Cooking=True
+StaticMeshComponent.Events=True
+FireProjectile_C.Tick=True
+FireProjectile_C.Rendering=True
+FireProjectile_C.Replication=True
+FireProjectile_C.Input=True
+FireProjectile_C.Actor=True
+ProjectileMovementComponent.Variable=True
+ProjectileMovementComponent.Sockets=True
+ProjectileMovementComponent.Projectile=True
+ProjectileMovementComponent.ProjectileBounces=True
+ProjectileMovementComponent.ProjectileSimulation=True
+ProjectileMovementComponent.Homing=True
+ProjectileMovementComponent.Velocity=True
+ProjectileMovementComponent.PlanarMovement=True
+ProjectileMovementComponent.MovementComponent=True
+ProjectileMovementComponent.Tags=True
+ProjectileMovementComponent.ComponentReplication=True
+ProjectileMovementComponent.Activation=True
+ProjectileMovementComponent.Cooking=True
+ProjectileMovementComponent.Events=True
+ElectricityProjectile_C.Tick=True
+ElectricityProjectile_C.Rendering=True
+ElectricityProjectile_C.Replication=True
+ElectricityProjectile_C.Input=True
+ElectricityProjectile_C.Actor=True
+AirProjectile_C.Tick=True
+AirProjectile_C.Rendering=True
+AirProjectile_C.Replication=True
+AirProjectile_C.Input=True
+AirProjectile_C.Actor=True
+radialHUD_C.Appearance=True
+radialHUD_C.Input=True
+radialHUD_C.Interaction=True
+radialHUD_C.Behavior=True
+radialHUD_C.Render Transform=True
+radialHUD_C.Performance=True
+radialHUD_C.Clipping=True
+radialHUD_C.Navigation=True
+radialHUD_C.Default=True
+radialHUD_C.Designer=True
+radialHUD_C.Layout=True
+StructProperty.Variable=True
+StructProperty.DefaultValueCategory=True
+K2Node_VariableGet.Variable=True
+K2Node_VariableGet.DefaultValueCategory=True
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=180.000
@@ -779,5 +876,96 @@ SceneOutliner.TimeStamp=2019.02.13-19.47.23
 SceneOutliner.LastCompileMethod=Unknown
 HierarchicalLODOutliner.TimeStamp=2019.02.13-19.47.13
 HierarchicalLODOutliner.LastCompileMethod=Unknown
+BlueprintGraph.TimeStamp=2018.07.28-08.45.53
+BlueprintGraph.LastCompileMethod=Unknown
+HierarchicalLODUtilities.TimeStamp=2018.07.28-08.46.00
+HierarchicalLODUtilities.LastCompileMethod=Unknown
+SequencerWidgets.TimeStamp=2018.07.28-08.46.09
+SequencerWidgets.LastCompileMethod=Unknown
+
+[/Script/UnrealEd.MaterialEditorOptions]
+bUseUnsortedMenus=False
+
+[WidgetTemplatesExpanded]
+Extra=False
+Input=False
+Lists=False
+Optimization=False
+Panel=False
+Primitive=False
+Special Effects=False
+Uncategorized=False
+
+[MessageLog]
+LastLogListing=LoadErrors
+
+[ContentBrowserRecent]
+MRUItem0=/Game/FirstPersonBP/Blueprints/radialHUD
+MRUItem1=/Game/FirstPersonBP/Blueprints/AirProjectile
+MRUItem2=/Game/FirstPersonBP/Blueprints/ElectricityProjectile
+MRUItem3=/Game/FirstPersonBP/Blueprints/FireProjectile
+MRUItem4=/Game/FirstPersonBP/Blueprints/WaterProjectile
+MRUItem5=/Game/Materials/Blue
+MRUItem6=/Game/Materials/Yellow
+MRUItem7=/Game/Materials/Red
+MRUItem8=/Game/Materials/Grey
+
+[MaterialEditor]
+PrimType=1
+
+[/Script/UnrealEd.MaterialStatsOptions]
+bPlatformUsed[0]=1
+bPlatformUsed[1]=0
+bPlatformUsed[2]=0
+bPlatformUsed[3]=0
+bPlatformUsed[4]=0
+bPlatformUsed[5]=0
+bPlatformUsed[6]=0
+bPlatformUsed[7]=0
+bPlatformUsed[8]=0
+bPlatformUsed[9]=0
+bPlatformUsed[10]=0
+bPlatformUsed[11]=0
+bPlatformUsed[12]=0
+bPlatformUsed[13]=0
+bPlatformUsed[14]=0
+bPlatformUsed[15]=0
+bPlatformUsed[16]=0
+bPlatformUsed[17]=0
+bPlatformUsed[18]=0
+bPlatformUsed[19]=0
+bPlatformUsed[20]=0
+bPlatformUsed[21]=0
+bPlatformUsed[22]=0
+bPlatformUsed[23]=0
+bPlatformUsed[24]=0
+bPlatformUsed[25]=0
+bPlatformUsed[26]=0
+bPlatformUsed[27]=0
+bPlatformUsed[28]=0
+bPlatformUsed[29]=0
+bMaterialQualityUsed[0]=0
+bMaterialQualityUsed[1]=1
+bMaterialQualityUsed[2]=0
+
+[AssetEditorToolkitTabLocation]
+/Game/Materials/Grey.Grey=1
+/Game/Materials/Red.Red=1
+/Game/Materials/Yellow.Yellow=1
+/Game/Materials/Blue.Blue=1
+/Game/FirstPersonBP/Blueprints/WaterProjectile.WaterProjectile=1
+/Game/FirstPersonBP/Blueprints/FireProjectile.FireProjectile=1
+/Game/FirstPersonBP/Blueprints/ElectricityProjectile.ElectricityProjectile=1
+/Game/FirstPersonBP/Blueprints/AirProjectile.AirProjectile=1
+/Game/FirstPersonBP/Blueprints/radialHUD.radialHUD=1
+
+[UMGEditor.Designer]
+PreviewWidth=1280
+PreviewHeight=720
+PreviewAspectRatio=16:9
+bIsInPortraitMode=False
+ProfileName=
+ScaleFactor=1.000000
+bCanPreviewSwapAspectRatio=False
 
 
