Particle systems in, but look dodgy

--- a/KV6002/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/KV6002/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -118,7 +118,7 @@ ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/FirstPersonBP/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/ParticleSystems
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 
@@ -127,7 +127,7 @@ LastLevel=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/FirstPersonBP/Blueprints/radialHUD.radialHUD
+OpenAssetsAtExit=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -232,6 +232,122 @@ StructProperty.Variable=True
 StructProperty.DefaultValueCategory=True
 K2Node_VariableGet.Variable=True
 K2Node_VariableGet.DefaultValueCategory=True
+FirstPersonCharacter_C.Default=True
+FirstPersonCharacter_C.Tick=True
+FirstPersonCharacter_C.Character=True
+FirstPersonCharacter_C.Camera=True
+FirstPersonCharacter_C.Pawn=True
+FirstPersonCharacter_C.Rendering=True
+FirstPersonCharacter_C.Replication=True
+FirstPersonCharacter_C.Input=True
+FirstPersonCharacter_C.Actor=True
+SkeletalMeshComponent.Variable=True
+SkeletalMeshComponent.TransformCommon=True
+SkeletalMeshComponent.Sockets=True
+SkeletalMeshComponent.Animation=True
+SkeletalMeshComponent.Mesh=True
+SkeletalMeshComponent.Materials=True
+SkeletalMeshComponent.Clothing=True
+SkeletalMeshComponent.ClothingSimulation=True
+SkeletalMeshComponent.Physics=True
+SkeletalMeshComponent.Collision=True
+SkeletalMeshComponent.Lighting=True
+SkeletalMeshComponent.Rendering=True
+SkeletalMeshComponent.Tags=True
+SkeletalMeshComponent.ComponentReplication=True
+SkeletalMeshComponent.Activation=True
+SkeletalMeshComponent.Cooking=True
+SkeletalMeshComponent.Events=True
+ParticleSystemComponent.Variable=True
+ParticleSystemComponent.TransformCommon=True
+ParticleSystemComponent.Sockets=True
+ParticleSystemComponent.Particles=True
+ParticleSystemComponent.EmitterActions=True
+ParticleSystemComponent.Attachment=True
+ParticleSystemComponent.Lighting=True
+ParticleSystemComponent.Rendering=True
+ParticleSystemComponent.LOD=True
+ParticleSystemComponent.Tags=True
+ParticleSystemComponent.ComponentReplication=True
+ParticleSystemComponent.Activation=True
+ParticleSystemComponent.Cooking=True
+ParticleSystemComponent.Events=True
+ParticleSystem.ParticleSystem=True
+ParticleSystem.Thumbnail=True
+ParticleSystem.LOD=True
+ParticleSystem.Bounds=True
+ParticleSystem.Delay=True
+ParticleSystem.Performance=True
+ParticleSystem.MacroUV=True
+ParticleSystem.Occlusion=True
+ParticleSystem.Materials=True
+ParticleModuleSizeMultiplyLife.Size=True
+ParticleModuleSizeMultiplyLife.Cascade=True
+ParticleModuleVelocity.Velocity=True
+ParticleModuleVelocity.Cascade=True
+ParticleModuleSize.Size=True
+ParticleModuleSize.Cascade=True
+ParticleModuleAccelerationConstant.ParticleModuleAccelerationConstant=True
+ParticleModuleAccelerationConstant.Cascade=True
+ParticleModuleLocationPrimitiveSphere.Location=True
+ParticleModuleLocationPrimitiveSphere.Cascade=True
+MaterialExpressionPanner.MaterialExpressionPanner=True
+MaterialExpressionPanner.MaterialExpression=True
+MaterialExpressionTextureSample.MaterialExpressionTextureSample=True
+MaterialExpressionTextureSample.MaterialExpressionTextureBase=True
+MaterialExpressionTextureSample.MaterialExpression=True
+MaterialExpressionAdd.MaterialExpressionAdd=True
+MaterialExpressionAdd.MaterialExpression=True
+MaterialExpressionParticleColor.MaterialExpression=True
+MaterialExpressionMultiply.MaterialExpressionMultiply=True
+MaterialExpressionMultiply.MaterialExpression=True
+MaterialExpression.MaterialExpression=True
+ParticleSpriteEmitter.Particle=True
+ParticleSpriteEmitter.Cascade=True
+ParticleSpriteEmitter.Significance=True
+ParticleModuleSpawn.Spawn=True
+ParticleModuleSpawn.Burst=True
+ParticleModuleSpawn.Cascade=True
+ParticleModuleRequired.Emitter=True
+ParticleModuleRequired.Duration=True
+ParticleModuleRequired.Delay=True
+ParticleModuleRequired.SubUV=True
+ParticleModuleRequired.MacroUV=True
+ParticleModuleRequired.Rendering=True
+ParticleModuleRequired.ParticleCutout=True
+ParticleModuleRequired.Normals=True
+ParticleModuleRequired.Materials=True
+ParticleModuleTypeDataBeam2.Beam=True
+ParticleModuleTypeDataBeam2.Branching=True
+ParticleModuleTypeDataBeam2.Distance=True
+ParticleModuleTypeDataBeam2.Taper=True
+ParticleModuleTypeDataBeam2.Rendering=True
+ParticleModuleTypeDataBeam2.Cascade=True
+ParticleModuleLifetime.Lifetime=True
+ParticleModuleLifetime.Cascade=True
+ParticleModuleColorOverLife.Color=True
+ParticleModuleColorOverLife.Cascade=True
+ParticleModuleColor.Color=True
+ParticleModuleColor.Cascade=True
+ParticleModuleBeamNoise.LowFreq=True
+ParticleModuleBeamNoise.Cascade=True
+ParticleModuleBeamSource.Source=True
+ParticleModuleBeamSource.Cascade=True
+ParticleModuleBeamTarget.Target=True
+ParticleModuleBeamTarget.Cascade=True
+K2Node_VariableGet.Events=True
+ParticleSystemComponent.Materials=True
+ClassProperty.Variable=True
+ClassProperty.DefaultValueCategory=True
+BoolProperty.Variable=True
+BoolProperty.DefaultValueCategory=True
+ObjectProperty.Variable=True
+ObjectProperty.DefaultValueCategory=True
+EdGraphNode_Comment.GraphNodeDetail=True
+EdGraphNode_Comment.Comment=True
+K2Node_InputTouch.Input=True
+K2Node_VariableSet.Variable=True
+K2Node_VariableSet.DefaultValueCategory=True
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=180.000
@@ -252,7 +368,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../Projects/KV6002/Content/
+UNR=Z:/KV6002-Team-Project/KV6002/Content/FirstPersonBP/Maps
 BRUSH=../../../Projects/KV6002/Content/
 FBX=../../../Projects/KV6002/Content/
 FBXAnim=../../../Projects/KV6002/Content/
@@ -876,12 +992,16 @@ SceneOutliner.TimeStamp=2019.02.13-19.47.23
 SceneOutliner.LastCompileMethod=Unknown
 HierarchicalLODOutliner.TimeStamp=2019.02.13-19.47.13
 HierarchicalLODOutliner.LastCompileMethod=Unknown
-BlueprintGraph.TimeStamp=2018.07.28-08.45.53
-BlueprintGraph.LastCompileMethod=Unknown
+BlueprintGraph.TimeStamp=2018.11.02-17.40.23
+BlueprintGraph.LastCompileMethod=External
 HierarchicalLODUtilities.TimeStamp=2018.07.28-08.46.00
 HierarchicalLODUtilities.LastCompileMethod=Unknown
 SequencerWidgets.TimeStamp=2018.07.28-08.46.09
 SequencerWidgets.LastCompileMethod=Unknown
+Cascade.TimeStamp=2018.11.02-17.40.25
+Cascade.LastCompileMethod=Unknown
+DistCurveEditor.TimeStamp=2018.11.02-17.40.41
+DistCurveEditor.LastCompileMethod=Unknown
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bUseUnsortedMenus=False
@@ -900,15 +1020,21 @@ Uncategorized=False
 LastLogListing=LoadErrors
 
 [ContentBrowserRecent]
-MRUItem0=/Game/FirstPersonBP/Blueprints/radialHUD
-MRUItem1=/Game/FirstPersonBP/Blueprints/AirProjectile
-MRUItem2=/Game/FirstPersonBP/Blueprints/ElectricityProjectile
-MRUItem3=/Game/FirstPersonBP/Blueprints/FireProjectile
-MRUItem4=/Game/FirstPersonBP/Blueprints/WaterProjectile
-MRUItem5=/Game/Materials/Blue
-MRUItem6=/Game/Materials/Yellow
-MRUItem7=/Game/Materials/Red
-MRUItem8=/Game/Materials/Grey
+MRUItem0=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
+MRUItem1=/Game/StarterContent/Particles/P_Fire
+MRUItem2=/Game/StarterContent/Particles/P_Sparks
+MRUItem3=/Game/Materials/Electricity
+MRUItem4=/Game/ParticleSystems/Electricity
+MRUItem5=/Game/ParticleSystems/Fire
+MRUItem6=/Game/FirstPersonBP/Blueprints/radialHUD
+MRUItem7=/Game/FirstPersonBP/Blueprints/AirProjectile
+MRUItem8=/Game/FirstPersonBP/Blueprints/ElectricityProjectile
+MRUItem9=/Game/FirstPersonBP/Blueprints/FireProjectile
+MRUItem10=/Game/FirstPersonBP/Blueprints/WaterProjectile
+MRUItem11=/Game/Materials/Blue
+MRUItem12=/Game/Materials/Yellow
+MRUItem13=/Game/Materials/Red
+MRUItem14=/Game/Materials/Grey
 
 [MaterialEditor]
 PrimType=1
@@ -958,6 +1084,11 @@ bMaterialQualityUsed[2]=0
 /Game/FirstPersonBP/Blueprints/ElectricityProjectile.ElectricityProjectile=1
 /Game/FirstPersonBP/Blueprints/AirProjectile.AirProjectile=1
 /Game/FirstPersonBP/Blueprints/radialHUD.radialHUD=1
+/Game/StarterContent/Particles/P_Sparks.P_Sparks=1
+/Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter=1
+/Game/Materials/Electricity.Electricity=1
+/Game/ParticleSystems/Electricity.Electricity=1
+/Game/StarterContent/Particles/P_Fire.P_Fire=1
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -967,5 +1098,72 @@ bIsInPortraitMode=False
 ProfileName=
 ScaleFactor=1.000000
 bCanPreviewSwapAspectRatio=False
+
+[/Script/UnrealEd.CascadeOptions]
+ModuleColor_Beam_Unselected=(B=235,G=150,R=160,A=0)
+ModuleColor_Beam_Selected=(B=0,G=100,R=255,A=0)
+ModuleColor_Trail_Unselected=(B=170,G=235,R=130,A=0)
+ModuleColor_Trail_Selected=(B=0,G=100,R=255,A=0)
+ModuleColor_Spawn_Unselected=(B=100,G=100,R=200,A=0)
+ModuleColor_Spawn_Selected=(B=50,G=50,R=255,A=0)
+ModuleColor_Light_Unselected=(B=49,G=40,R=90,A=0)
+ModuleColor_Light_Selected=(B=0,G=100,R=255,A=0)
+ModuleColor_SubUV_Unselected=(B=49,G=90,R=40,A=0)
+ModuleColor_SubUV_Selected=(B=100,G=200,R=50,A=0)
+ModuleColor_Required_Unselected=(B=100,G=200,R=200,A=0)
+ModuleColor_Required_Selected=(B=50,G=225,R=255,A=0)
+ModuleColor_Event_Unselected=(B=255,G=64,R=64,A=0)
+ModuleColor_Event_Selected=(B=255,G=0,R=0,A=0)
+GridColor_Hi=(B=255,G=100,R=0,A=0)
+GridColor_Low=(B=255,G=100,R=0,A=0)
+bShowParticleCounts=False
+bShowParticleEvents=False
+bShowParticleTimes=False
+bShowParticleDistance=False
+bShowParticleMemory=False
+ParticleMemoryUpdateTime=0.000000
+bShowFloor=False
+FloorMesh=/Engine/EditorMeshes/AnimTreeEd_PreviewFloor.AnimTreeEd_PreviewFloor
+FloorPosition=(X=0.000000,Y=0.000000,Z=0.000000)
+FloorRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
+FloorScale=1.000000
+FloorScale3D=(X=1.000000,Y=1.000000,Z=1.000000)
+
+[DetailPropertyExpansion]
+ParticleModuleSizeMultiplyLife="\"Object.Size.LifeMultiplier.Distribution\" "
+ParticleModuleSizeBase="\"Object.Size.StartSize\" \"Object.Size.StartSize.Distribution\" "
+ParticleModule=
+Object=
+ParticleModuleVelocity="\"Object.Velocity.StartVelocity\" \"Object.Velocity.StartVelocity.Distribution\" \"Object.Velocity.StartVelocityRadial.Distribution\" "
+ParticleModuleVelocityBase="\"Object.Velocity.StartVelocity\" \"Object.Velocity.StartVelocity.Distribution\" \"Object.Velocity.StartVelocityRadial.Distribution\" "
+ParticleModuleSize="\"Object.Size.StartSize\" \"Object.Size.StartSize.Distribution\" "
+ParticleModuleLocationPrimitiveSphere="\"Object.Location.StartRadius.Distribution\" \"Object.Location.VelocityScale.Distribution\" \"Object.Location.StartLocation.Distribution\" "
+ParticleModuleLocationPrimitiveBase="\"Object.Location.StartRadius.Distribution\" \"Object.Location.VelocityScale.Distribution\" \"Object.Location.StartLocation.Distribution\" "
+ParticleModuleLocationBase="\"Object.Location.StartRadius.Distribution\" \"Object.Location.VelocityScale.Distribution\" \"Object.Location.StartLocation.Distribution\" "
+ParticleModuleSpawn="\"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstScale.Distribution\" "
+ParticleModuleSpawnBase="\"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstScale.Distribution\" "
+ParticleModuleTypeDataBeam2="\"Object.Distance.Distance\" \"Object.Distance.Distance.Distribution\" \"Object.Taper.TaperFactor.Distribution\" \"Object.Taper.TaperScale.Distribution\" "
+ParticleModuleTypeDataBase="\"Object.Distance.Distance\" \"Object.Distance.Distance.Distribution\" \"Object.Taper.TaperFactor.Distribution\" \"Object.Taper.TaperScale.Distribution\" "
+ParticleModuleLifetime="\"Object.Lifetime.Lifetime\" \"Object.Lifetime.Lifetime.Distribution\" "
+ParticleModuleLifetimeBase="\"Object.Lifetime.Lifetime\" \"Object.Lifetime.Lifetime.Distribution\" "
+ParticleModuleColorOverLife="\"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution\" "
+ParticleModuleColorBase="\"Object.Color.StartColor\" \"Object.Color.StartColor.Distribution\" \"Object.Color.StartAlpha.Distribution\" "
+ParticleModuleColor="\"Object.Color.StartColor\" \"Object.Color.StartColor.Distribution\" \"Object.Color.StartAlpha.Distribution\" "
+ParticleModuleBeamNoise="\"Object.LowFreq.NoiseRange\" \"Object.LowFreq.NoiseRange.Distribution\" \"Object.LowFreq.NoiseRangeScale.Distribution\" \"Object.LowFreq.NoiseSpeed\" \"Object.LowFreq.NoiseSpeed.Distribution\" \"Object.LowFreq.NoiseTangentStrength.Distribution\" \"Object.LowFreq.NoiseScale.Distribution\" "
+ParticleModuleBeamBase="\"Object.LowFreq.NoiseRange\" \"Object.LowFreq.NoiseRange.Distribution\" \"Object.LowFreq.NoiseRangeScale.Distribution\" \"Object.LowFreq.NoiseSpeed\" \"Object.LowFreq.NoiseSpeed.Distribution\" \"Object.LowFreq.NoiseTangentStrength.Distribution\" \"Object.LowFreq.NoiseScale.Distribution\" "
+ParticleModuleBeamSource="\"Object.Source.Source\" \"Object.Source.Source.Distribution\" \"Object.Source.SourceTangent.Distribution\" \"Object.Source.SourceStrength.Distribution\" "
+ParticleModuleBeamTarget="\"Object.Target.Target\" \"Object.Target.Target.Distribution\" \"Object.Target.TargetTangent.Distribution\" \"Object.Target.TargetStrength.Distribution\" "
+
+[CascadeEditor]
+LightDir=P=-44.999969 Y=-179.999969 R=0.000000
+
+[MRU]
+MRUItem0=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
+
+[DetailCustomWidgetExpansion]
+ParticleModuleColor=ParticleModuleColor.Color.Distribution,
+
+[DetailCategoriesAdvanced]
+ParticleSystemComponent.Rendering=False
 
 
