--- a/KV6002/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/KV6002/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -120,7 +120,7 @@ ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSizeScale=0.187500
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/Images/RadialMenu
+ContentBrowserTab1.SelectedPaths=/Game/FirstPersonBP/Blueprints
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 
@@ -129,6 +129,8 @@ LastLevel=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 
 [AssetEditorManager]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/Geometry/Pickups/GunModule.GunModule
+OpenAssetsAtExit=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -452,7 +454,7 @@ Button.Navigation=True
 Button.Events=True
 Brush.TransformCommon=True
 Brush.BrushSettings=True
-Brush.Actor=False
+Brush.Actor=True
 Brush.Surface Materials=True
 Brush.Geometry=True
 Brush.Surface Properties=True
@@ -572,6 +574,61 @@ K2Node_MakeStruct.PinOptions=True
 K2Node_SetFieldsInStruct.PinOptions=True
 ByteProperty.Variable=True
 ByteProperty.DefaultValueCategory=True
+Actor.Actor=True
+FirstPersonCharacter_C.TransformCommon=True
+FirstPersonCharacter_C.Animation=True
+FirstPersonCharacter_C.Mesh=True
+FirstPersonCharacter_C.Physics=True
+FirstPersonCharacter_C.Clothing=True
+FirstPersonCharacter_C.Collision=True
+FirstPersonCharacter_C.Lighting=True
+FirstPersonCharacter_C.ClothingSimulation=True
+FirstPersonCharacter_C.Tags=True
+FirstPersonCharacter_C.Activation=True
+FirstPersonCharacter_C.Cooking=True
+FirstPersonCharacter_C.Character Movement: Jumping / Falling=True
+FirstPersonCharacter_C.Character Movement (General Settings)=True
+FirstPersonCharacter_C.Character Movement: Walking=True
+FirstPersonCharacter_C.Character Movement: Swimming=True
+FirstPersonCharacter_C.Character Movement: Flying=True
+FirstPersonCharacter_C.Character Movement: Custom Movement=True
+FirstPersonCharacter_C.Character Movement (Rotation Settings)=True
+FirstPersonCharacter_C.Character Movement: Physics Interaction=True
+FirstPersonCharacter_C.Character Movement (Networking)=True
+FirstPersonCharacter_C.Character Movement=True
+FirstPersonCharacter_C.Character Movement: Avoidance=True
+FirstPersonCharacter_C.Character Movement: NavMesh Movement=True
+FirstPersonCharacter_C.RootMotion=True
+FirstPersonCharacter_C.NavMovement=True
+FirstPersonCharacter_C.Velocity=True
+FirstPersonCharacter_C.PlanarMovement=True
+FirstPersonCharacter_C.MovementComponent=True
+FirstPersonCharacter_C.Shape=True
+FirstPersonCharacter_C.Navigation=True
+GunModule_C.Tick=True
+GunModule_C.Default=True
+GunModule_C.Rendering=True
+GunModule_C.Replication=True
+GunModule_C.Input=True
+GunModule_C.Actor=True
+GunModule_C.TransformCommon=True
+TextRenderComponent.Variable=True
+TextRenderComponent.TransformCommon=True
+TextRenderComponent.Sockets=True
+TextRenderComponent.Materials=True
+TextRenderComponent.Text=True
+TextRenderComponent.Rendering=True
+TextRenderComponent.Lighting=True
+TextRenderComponent.Tags=True
+TextRenderComponent.ComponentReplication=True
+TextRenderComponent.Cooking=True
+TextRenderComponent.Events=True
+FirstPersonCharacter_C.Variable=True
+FirstPersonCharacter_C.Sockets=True
+FirstPersonCharacter_C.ComponentReplication=True
+FirstPersonCharacter_C.Events=True
+StrProperty.Variable=True
+StrProperty.DefaultValueCategory=True
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=180.000
@@ -1218,8 +1275,8 @@ HierarchicalLODOutliner.TimeStamp=2019.02.13-19.47.13
 HierarchicalLODOutliner.LastCompileMethod=Unknown
 BlueprintGraph.TimeStamp=2018.11.02-17.40.23
 BlueprintGraph.LastCompileMethod=External
-HierarchicalLODUtilities.TimeStamp=2018.07.28-08.46.00
-HierarchicalLODUtilities.LastCompileMethod=Unknown
+HierarchicalLODUtilities.TimeStamp=2018.11.02-17.12.01
+HierarchicalLODUtilities.LastCompileMethod=External
 SequencerWidgets.TimeStamp=2018.11.02-17.12.07
 SequencerWidgets.LastCompileMethod=External
 Cascade.TimeStamp=2018.11.02-17.40.25
@@ -1248,29 +1305,29 @@ Uncategorized=False
 User Created=True
 
 [MessageLog]
-LastLogListing=LightingResults
+LastLogListing=AssetReimport
 
 [ContentBrowserRecent]
 MRUItem0=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
-MRUItem1=/Game/FirstPersonBP/Blueprints/InventorySlot
-MRUItem2=/Game/FirstPersonBP/Blueprints/radialHUD
-MRUItem3=/Game/FirstPersonBP/Blueprints/Inventory
-MRUItem4=/Game/Materials/Decals/ElectricityDecal
-MRUItem5=/Game/Materials/Decals/WaterDecal
-MRUItem6=/Game/Materials/Decals/FireDecal
-MRUItem7=/Game/Geometry/Pickups/Casing
-MRUItem8=/Game/Materials/fireRed_T
-MRUItem9=/Game/Materials/Fire
-MRUItem10=/Game/Materials/fireRed_T_Mat
-MRUItem11=/Game/Geometry/Meshes/Casing
-MRUItem12=/Game/Materials/Decals/fire_T
-MRUItem13=/Game/Casing
-MRUItem14=/Game/Materials/Blue
-MRUItem15=/Game/StarterContent/Particles/P_Fire
-MRUItem16=/Game/StarterContent/Particles/P_Sparks
-MRUItem17=/Game/Materials/Electricity
-MRUItem18=/Game/ParticleSystems/Electricity
-MRUItem19=/Game/ParticleSystems/Fire
+MRUItem1=/Game/Materials/Decals/AirDecal
+MRUItem2=/Game/Geometry/Pickups/GunModule
+MRUItem3=/Game/Materials/Grey
+MRUItem4=/Game/Geometry/Pickups/Casing
+MRUItem5=/Game/FirstPersonBP/Blueprints/InventorySlot
+MRUItem6=/Game/FirstPersonBP/Blueprints/radialHUD
+MRUItem7=/Game/FirstPersonBP/Blueprints/Inventory
+MRUItem8=/Game/Materials/Decals/ElectricityDecal
+MRUItem9=/Game/Materials/Decals/WaterDecal
+MRUItem10=/Game/Materials/Decals/FireDecal
+MRUItem11=/Game/Materials/fireRed_T
+MRUItem12=/Game/Materials/Fire
+MRUItem13=/Game/Materials/fireRed_T_Mat
+MRUItem14=/Game/Geometry/Meshes/Casing
+MRUItem15=/Game/Materials/Decals/fire_T
+MRUItem16=/Game/Casing
+MRUItem17=/Game/Materials/Blue
+MRUItem18=/Game/StarterContent/Particles/P_Fire
+MRUItem19=/Game/StarterContent/Particles/P_Sparks
 
 [MaterialEditor]
 PrimType=1
@@ -1333,6 +1390,7 @@ bMaterialQualityUsed[2]=0
 /Game/Materials/Decals/WaterDecal.WaterDecal=1
 /Game/Materials/Decals/ElectricityDecal.ElectricityDecal=1
 /Game/FirstPersonBP/Blueprints/InventorySlot.InventorySlot=1
+/Game/Materials/Decals/AirDecal.AirDecal=1
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -1468,12 +1526,12 @@ ImportLandscape_AlphamapType=0
 ShowUnusedLayers=True
 
 [PlacementMode]
+RecentlyPlaced=/Game/Geometry/Pickups/GunModule.GunModule;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/Materials/Fire.Fire;
 RecentlyPlaced=/Game/Materials/fireRed_T.fireRed_T;
 RecentlyPlaced=/Script/Engine.DecalActor;/Engine/Transient.ActorFactoryDeferredDecal_0
 RecentlyPlaced=/Game/Materials/Decals/FireDecal.FireDecal;
-RecentlyPlaced=/Game/Geometry/Pickups/Casing.Casing;
 RecentlyPlaced=/Game/Materials/Grey.Grey;
 RecentlyPlaced=/Engine/BasicShapes/Cylinder.Cylinder;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/Materials/Blue.Blue;
