Thumbnails for items

--- a/KV6002/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/KV6002/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -79,7 +79,6 @@ LastExecutedLaunchName=DESKTOP-L99SHIF
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
-LastExecutedPlayModeType=PlayMode_InNewProcess
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 bInvertMouseLookYAxis=False
@@ -120,7 +119,7 @@ ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSizeScale=0.187500
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/Materials
+ContentBrowserTab1.SelectedPaths=/Game/FirstPersonBP/Blueprints
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 
@@ -674,6 +673,23 @@ FloatingText.TransformCommon=True
 FloatingText.Rendering=True
 FloatingText.Input=True
 FloatingText.Actor=True
+PointLight.TransformCommon=True
+PointLight.Light=True
+PointLight.Rendering=True
+PointLight.Lightmass=True
+PointLight.Performance=True
+PointLight.LightFunction=True
+PointLight.Light Profiles=True
+PointLight.DistanceFieldShadows=True
+PointLight.Tags=True
+PointLight.Cooking=True
+PointLight.Actor=True
+LandscapeGizmoActiveActor.TransformCommon=True
+LandscapeGizmoActiveActor.LandscapeGizmoActiveActor=True
+LandscapeGizmoActiveActor.Gizmo=True
+LandscapeGizmoActiveActor.Rendering=True
+LandscapeGizmoActiveActor.Input=True
+LandscapeGizmoActiveActor.Actor=True
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=180.000
@@ -694,7 +710,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=C:/Users/User/Documents/GitHub/KV6002-Team-Project/KV6002/Content/FirstPersonBP/Maps
+UNR=Z:/KV6002-Team-Project/KV6002/Content/FirstPersonBP/Maps
 BRUSH=../../../Projects/KV6002/Content/
 FBX=../../../Projects/KV6002/Content/
 FBXAnim=../../../Projects/KV6002/Content/
@@ -1318,26 +1334,26 @@ SceneOutliner.TimeStamp=2019.02.13-19.47.23
 SceneOutliner.LastCompileMethod=Unknown
 HierarchicalLODOutliner.TimeStamp=2019.02.13-19.47.13
 HierarchicalLODOutliner.LastCompileMethod=Unknown
-BlueprintGraph.TimeStamp=2018.11.02-17.40.23
+BlueprintGraph.TimeStamp=2018.11.02-17.55.25
 BlueprintGraph.LastCompileMethod=External
 HierarchicalLODUtilities.TimeStamp=2018.11.02-17.12.01
 HierarchicalLODUtilities.LastCompileMethod=External
-SequencerWidgets.TimeStamp=2018.11.02-17.12.07
+SequencerWidgets.TimeStamp=2018.11.02-17.57.52
 SequencerWidgets.LastCompileMethod=External
 Cascade.TimeStamp=2018.11.02-17.40.25
 Cascade.LastCompileMethod=Unknown
 DistCurveEditor.TimeStamp=2018.11.02-17.40.41
 DistCurveEditor.LastCompileMethod=Unknown
-MeshBuilder.TimeStamp=2018.11.02-17.12.03
+MeshBuilder.TimeStamp=2018.11.02-17.57.01
 MeshBuilder.LastCompileMethod=External
 TextureEditor.TimeStamp=2018.11.02-17.12.08
 TextureEditor.LastCompileMethod=Unknown
 StaticMeshEditor.TimeStamp=2018.11.02-17.12.08
 StaticMeshEditor.LastCompileMethod=Unknown
-Voice.TimeStamp=2018.07.28-08.46.13
-Voice.LastCompileMethod=Unknown
-MovieSceneCapture.TimeStamp=2018.07.28-08.46.04
-MovieSceneCapture.LastCompileMethod=Unknown
+Voice.TimeStamp=2018.11.02-17.58.37
+Voice.LastCompileMethod=External
+MovieSceneCapture.TimeStamp=2018.11.02-17.57.09
+MovieSceneCapture.LastCompileMethod=External
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bUseUnsortedMenus=False
@@ -1357,26 +1373,26 @@ User Created=True
 LastLogListing=AssetReimport
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Materials/M_Glass
-MRUItem1=/Game/Materials/M_GlassYellow
-MRUItem2=/Game/Materials/M_GlassBlue
-MRUItem3=/Game/Materials/M_GlassRed
-MRUItem4=/Game/StarterContent/Materials/M_Glass
-MRUItem5=/Game/FirstPersonBP/Blueprints/radialHUD
-MRUItem6=/Game/Geometry/BasicBarrier
-MRUItem7=/Game/Geometry/Pickups/GunModule
-MRUItem8=/Game/FirstPersonBP/Blueprints/Inventory
-MRUItem9=/Game/FirstPersonBP/Blueprints/Prompt
-MRUItem10=/Game/FirstPersonBP/Blueprints/FirstPersonHUD
-MRUItem11=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
-MRUItem12=/Game/Materials/Decals/AirDecal
-MRUItem13=/Game/Materials/Grey
-MRUItem14=/Game/Geometry/Pickups/Casing
-MRUItem15=/Game/FirstPersonBP/Blueprints/InventorySlot
-MRUItem16=/Game/Materials/Decals/ElectricityDecal
-MRUItem17=/Game/Materials/Decals/WaterDecal
-MRUItem18=/Game/Materials/Decals/FireDecal
-MRUItem19=/Game/Materials/fireRed_T
+MRUItem0=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
+MRUItem1=/Game/Geometry/Pickups/GunModule
+MRUItem2=/Game/FirstPersonBP/Blueprints/InventorySlot
+MRUItem3=/Game/FirstPersonBP/Blueprints/Inventory
+MRUItem4=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
+MRUItem5=/Game/StarterContent/Maps/StarterMap
+MRUItem6=/Game/Photography
+MRUItem7=/Game/PauseMenu
+MRUItem8=/Game/Materials/M_Glass
+MRUItem9=/Game/Materials/M_GlassYellow
+MRUItem10=/Game/Materials/M_GlassBlue
+MRUItem11=/Game/Materials/M_GlassRed
+MRUItem12=/Game/StarterContent/Materials/M_Glass
+MRUItem13=/Game/FirstPersonBP/Blueprints/radialHUD
+MRUItem14=/Game/Geometry/BasicBarrier
+MRUItem15=/Game/FirstPersonBP/Blueprints/Prompt
+MRUItem16=/Game/FirstPersonBP/Blueprints/FirstPersonHUD
+MRUItem17=/Game/Materials/Decals/AirDecal
+MRUItem18=/Game/Materials/Grey
+MRUItem19=/Game/Geometry/Pickups/Casing
 
 [MaterialEditor]
 PrimType=1
@@ -1448,6 +1464,7 @@ bMaterialQualityUsed[2]=0
 /Game/Materials/M_GlassRed.M_GlassRed=1
 /Game/Materials/M_Glass.M_Glass=1
 /Game/Geometry/BasicBarrier.BasicBarrier=1
+/Game/PauseMenu.PauseMenu=1
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -1517,9 +1534,9 @@ PanelWidget="\"Object.Render Transform.RenderTransform\" \"Object.Render Transfo
 Widget=
 Visual=
 Image="\"Object.Appearance.Brush\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
-InventorySlot_C="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
+InventorySlot_C=
 UserWidget=
-Inventory_C=
+Inventory_C="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 VerticalBox="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 UniformGridPanel="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 CanvasPanel="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
@@ -1537,6 +1554,8 @@ LightDir=P=-44.999969 Y=-179.999969 R=0.000000
 
 [MRU]
 MRUItem0=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
+MRUItem1=/Game/StarterContent/Maps/StarterMap
+MRUItem2=/Game/Photography
 
 [DetailCustomWidgetExpansion]
 ParticleModuleColor=ParticleModuleColor.Color.Distribution,
@@ -1584,10 +1603,11 @@ ImportLandscape_AlphamapType=0
 ShowUnusedLayers=True
 
 [PlacementMode]
+RecentlyPlaced=/Game/Geometry/Pickups/GunModule.GunModule;
+RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
 RecentlyPlaced=/Script/Engine.TextRenderActor;/Engine/Transient.ActorFactoryTextRender_0
 RecentlyPlaced=/Script/VREditor.FloatingText;
 RecentlyPlaced=/Game/Geometry/BasicBarrier.BasicBarrier;
-RecentlyPlaced=/Game/Geometry/Pickups/GunModule.GunModule;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/Materials/Fire.Fire;
 RecentlyPlaced=/Game/Materials/fireRed_T.fireRed_T;
