Inventory now toggles, Colours are fixed

--- a/KV6002/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/KV6002/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -79,6 +79,7 @@ LastExecutedLaunchName=DESKTOP-L99SHIF
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
+LastExecutedPlayModeType=PlayMode_InNewProcess
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 bInvertMouseLookYAxis=False
@@ -119,7 +120,7 @@ ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSizeScale=0.187500
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/FirstPersonBP/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 
@@ -690,6 +691,29 @@ LandscapeGizmoActiveActor.Gizmo=True
 LandscapeGizmoActiveActor.Rendering=True
 LandscapeGizmoActiveActor.Input=True
 LandscapeGizmoActiveActor.Actor=True
+K2Node_BreakStruct.PinOptions=True
+InventoryToggle_C.Tick=True
+InventoryToggle_C.Rendering=True
+InventoryToggle_C.Replication=True
+InventoryToggle_C.Input=True
+InventoryToggle_C.Actor=True
+InventoryToggle_C.TransformCommon=True
+InventoryToggle_C.Shape=True
+InventoryToggle_C.Navigation=True
+InventoryToggle_C.Physics=True
+InventoryToggle_C.Collision=True
+InventoryToggle_C.Tags=True
+InventoryToggle_C.Cooking=True
+EnableInventory_C.TransformCommon=True
+EnableInventory_C.Shape=True
+EnableInventory_C.Navigation=True
+EnableInventory_C.Physics=True
+EnableInventory_C.Collision=True
+EnableInventory_C.Rendering=True
+EnableInventory_C.Tags=True
+EnableInventory_C.Cooking=True
+EnableInventory_C.Input=True
+EnableInventory_C.Actor=True
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=180.000
@@ -710,7 +734,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=Z:/KV6002-Team-Project/KV6002/Content/FirstPersonBP/Maps
+UNR=C:/Users/User/Documents/GitHub/KV6002-Team-Project/KV6002/Content/FirstPersonBP/Maps
 BRUSH=../../../Projects/KV6002/Content/
 FBX=../../../Projects/KV6002/Content/
 FBXAnim=../../../Projects/KV6002/Content/
@@ -1373,26 +1397,26 @@ User Created=True
 LastLogListing=AssetReimport
 
 [ContentBrowserRecent]
-MRUItem0=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
+MRUItem0=/Game/InventoryToggle
 MRUItem1=/Game/Geometry/Pickups/GunModule
 MRUItem2=/Game/FirstPersonBP/Blueprints/InventorySlot
 MRUItem3=/Game/FirstPersonBP/Blueprints/Inventory
-MRUItem4=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
-MRUItem5=/Game/StarterContent/Maps/StarterMap
-MRUItem6=/Game/Photography
-MRUItem7=/Game/PauseMenu
-MRUItem8=/Game/Materials/M_Glass
-MRUItem9=/Game/Materials/M_GlassYellow
-MRUItem10=/Game/Materials/M_GlassBlue
-MRUItem11=/Game/Materials/M_GlassRed
-MRUItem12=/Game/StarterContent/Materials/M_Glass
-MRUItem13=/Game/FirstPersonBP/Blueprints/radialHUD
-MRUItem14=/Game/Geometry/BasicBarrier
-MRUItem15=/Game/FirstPersonBP/Blueprints/Prompt
-MRUItem16=/Game/FirstPersonBP/Blueprints/FirstPersonHUD
-MRUItem17=/Game/Materials/Decals/AirDecal
-MRUItem18=/Game/Materials/Grey
-MRUItem19=/Game/Geometry/Pickups/Casing
+MRUItem4=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
+MRUItem5=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
+MRUItem6=/Game/StarterContent/Maps/StarterMap
+MRUItem7=/Game/Photography
+MRUItem8=/Game/PauseMenu
+MRUItem9=/Game/Materials/M_Glass
+MRUItem10=/Game/Materials/M_GlassYellow
+MRUItem11=/Game/Materials/M_GlassBlue
+MRUItem12=/Game/Materials/M_GlassRed
+MRUItem13=/Game/StarterContent/Materials/M_Glass
+MRUItem14=/Game/FirstPersonBP/Blueprints/radialHUD
+MRUItem15=/Game/Geometry/BasicBarrier
+MRUItem16=/Game/FirstPersonBP/Blueprints/Prompt
+MRUItem17=/Game/FirstPersonBP/Blueprints/FirstPersonHUD
+MRUItem18=/Game/Materials/Decals/AirDecal
+MRUItem19=/Game/Materials/Grey
 
 [MaterialEditor]
 PrimType=1
@@ -1465,6 +1489,7 @@ bMaterialQualityUsed[2]=0
 /Game/Materials/M_Glass.M_Glass=1
 /Game/Geometry/BasicBarrier.BasicBarrier=1
 /Game/PauseMenu.PauseMenu=1
+/Game/EnableInventory.EnableInventory=1
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -1531,11 +1556,11 @@ ParticleModuleBeamSource="\"Object.Source.Source\" \"Object.Source.Source.Distri
 ParticleModuleBeamTarget="\"Object.Target.Target\" \"Object.Target.Target.Distribution\" \"Object.Target.TargetTangent.Distribution\" \"Object.Target.TargetStrength.Distribution\" "
 HorizontalBox="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 PanelWidget="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
-Widget=
-Visual=
+Widget="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
+Visual="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 Image="\"Object.Appearance.Brush\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 InventorySlot_C=
-UserWidget=
+UserWidget="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 Inventory_C="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 VerticalBox="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 UniformGridPanel="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
@@ -1603,12 +1628,13 @@ ImportLandscape_AlphamapType=0
 ShowUnusedLayers=True
 
 [PlacementMode]
-RecentlyPlaced=/Game/Geometry/Pickups/GunModule.GunModule;
+RecentlyPlaced=/Game/InventoryToggle.InventoryToggle;
 RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
+RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
+RecentlyPlaced=/Game/Geometry/Pickups/GunModule.GunModule;
 RecentlyPlaced=/Script/Engine.TextRenderActor;/Engine/Transient.ActorFactoryTextRender_0
 RecentlyPlaced=/Script/VREditor.FloatingText;
 RecentlyPlaced=/Game/Geometry/BasicBarrier.BasicBarrier;
-RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/Materials/Fire.Fire;
 RecentlyPlaced=/Game/Materials/fireRed_T.fireRed_T;
 RecentlyPlaced=/Script/Engine.DecalActor;/Engine/Transient.ActorFactoryDeferredDecal_0
